# rbot_demo1

./: .gitignore
src/jxb_sldasm/: CMakeLists.txt  package.xml
src/jxb_sldasm/launch/: display.launch  gazebo.launch
src/jxb_sldasm/meshes/: base_link.STL  j1_Link.STL  j2_Link.STL  j3_Link.STL  j4_Link.STL  j5_Link.STL  j6_Link.STL
src/jxb_sldasm/urdf/: jxb_sldasm.csv  jxb_sldasm.urdf  jxb_sldasm（复件）.urdf
src/jxb_sldasm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jxb_sldasm_config/config/: fake_controllers.yaml  jxb_sldasm.srdf  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
src/jxb_sldasm_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur5_description/: CMakeLists.txt  package.xml
src/ur5_description/launch/: gazebo.launch
src/ur5_gripper_moveit_config/: .setup_assistant  package.xml
src/ur5_gripper_moveit_config/config/: ompl_planning.yaml  ur5.srdf
src/ur5_gripper_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  my_gazebo_states_controller.launch  my_gazebo_world.launch  my_ros_controller.launch  tableObj.world  test.world
src/ur5_gripper_moveit_demo/: CMakeLists.txt  package.xml
(+13 files in other folders)
